fix wrapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -44,7 +44,7 @@ todos {
 .item-container {
   padding: 0.5em 0.5em;
   position: relative;
-  height: 2.5em;
+  /*height: 2.5em;*/
 }
 
 .float-right {
